; ModuleID = '/home/carl/AnghaBench/freebsd/sys/fs/nfsclient/extr_nfs_clport.c_nfscl_init.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/fs/nfsclient/extr_nfs_clport.c_nfscl_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@nfscl_init.inited = internal global i32 0, align 4
@nfscl_inited = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [8 x i8] c"nfspbuf\00", align 1
@nswbuf = common dso_local global i32 0, align 4
@ncl_pbuf_zone = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @nfscl_init() #0 {
  %1 = load i32, i32* @nfscl_init.inited, align 4
  %2 = icmp ne i32 %1, 0
  br i1 %2, label %3, label %4

3:                                                ; preds = %0
  br label %8

4:                                                ; preds = %0
  store i32 1, i32* @nfscl_init.inited, align 4
  store i32 1, i32* @nfscl_inited, align 4
  %5 = load i32, i32* @nswbuf, align 4
  %6 = sdiv i32 %5, 2
  %7 = call i32 @pbuf_zsecond_create(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0), i32 %6)
  store i32 %7, i32* @ncl_pbuf_zone, align 4
  br label %8

8:                                                ; preds = %4, %3
  ret void
}

declare dso_local i32 @pbuf_zsecond_create(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
